--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script src="./lib/phaser.js"></script>
     <script src="./src/prefabs/Rocket.js"></script>
     <script src="./src/prefabs/Spaceship.js"></script>
+    <script src="./src/prefabs/SuperSS.js"></script>
     <script src="./src/scenes/Menu.js"></script>
     <script src="./src/scenes/Play.js"></script>
     <script src="src/main.js"></script>
 </head>
 <body>
-    
 </body>
 </html>
