--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Rocket Patrol</title>
     <script src="./lib/phaser.js"></script>
     <script src="./src/prefabs/Rocket.js"></script>
+    <script src="./src/prefabs/Gun.js"></script>
     <script src="./src/prefabs/Spaceship.js"></script>
     <script src="./src/prefabs/SuperSS.js"></script>
     <script src="./src/prefabs/Timeship.js"></script>
